--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,8 +19,8 @@ bind K resize-pane -U 5
 bind J resize-pane -D 5
 bind C-h split-window -v                            # 水平方向新增面板，加-c '${pane_current_path}'默认进入当前目录
 bind C-v split-window -h                            # 垂直方向新增面板，加 -c '${pane_current_path}'默认进入当前目录
-bind -r h previous-window                         # 修改切换prev window 快捷键
-bind -r l next-window                             # 修改切换next window 快捷键
+# bind -r h previous-window                         # 修改切换prev window 快捷键
+# bind -r l next-window                             # 修改切换next window 快捷键
 # 绑定y键为复制选中文本到Mac系统粘贴板
 #bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
 setw -g mode-keys vi
