tmux: fix nvm error in tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,3 +1,5 @@
+set -g default-command /bin/zsh
+set -g default-shell /bin/zsh
 set -g prefix C-a                                   # 设置Ctrl+a作为前缀
 set -g history-limit 65535                          # 设置tumx缓冲区大小
 set -g default-terminal "screen-256color"           # 主题
