--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,3 +1,4 @@
+# set default shell to zsh
 set -g default-command /bin/zsh
 set -g default-shell /bin/zsh
 set -g prefix C-a                                   # 设置Ctrl+a作为前缀
@@ -45,7 +46,7 @@ set -g status-fg yellow                                # 设置状态栏前景
 set -g status-left "🤣#[fg=red]#[bg=black] #S | #I.#P | #W"
 set -g status-left-length 60                        # 状态栏左边长度300
 # 状态栏右侧内容
-set -g status-right "#{battery_icon}#{battery_percentage} 🕓#[fg=blue]#[bg=black] %Y/%m/%d 周%a %H:%M #[default]"
+set -g status-right "#{battery_icon}#{battery_percentage} 🕓#[fg=blue]#[bg=black] %Y-%m-%d %a %H:%M #[default]"
 set -g status-right-length 60                       # 状态栏右边长度500
 
 # 设置window样式
