feat: change vim and tmux config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -22,10 +22,14 @@ bind K resize-pane -U 5
 bind J resize-pane -D 5
 bind C-h split-window -v                            # 水平方向新增面板，加-c '${pane_current_path}'默认进入当前目录
 bind C-v split-window -h                            # 垂直方向新增面板，加 -c '${pane_current_path}'默认进入当前目录
-# bind -r h previous-window                         # 修改切换prev window 快捷键
-# bind -r l next-window                             # 修改切换next window 快捷键
+
+bind Escape copy-mode # 绑定esc键为进入复制模式
+bind -T copy-mode-vi v send-keys -X begin-selection
 # 绑定y键为复制选中文本到Mac系统粘贴板
-#bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
+bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
+# 鼠标拖动选中文本，并复制到Mac系统粘贴板
+bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "pbcopy"
+
 setw -g mode-keys vi
 set -g @continuum-restore 'on'                      # 启用自动恢复
 set -g @continuum-save-interval '60'				        # continuum每60分钟备份一次
