feat: change vim tmux config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -16,7 +16,7 @@ bind h select-pane -L                               # up
 bind j select-pane -D                               # down
 bind k select-pane -U                               # left
 bind l select-pane -R                               # right
-bind L resize-pane -L 10                            # 向左扩展10
+bind H resize-pane -L 10                            # 向左扩展10
 bind R resize-pane -R 10                            # 向右扩展10
 bind K resize-pane -U 5
 bind J resize-pane -D 5
