--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -17,7 +17,7 @@ bind j select-pane -D                               # down
 bind k select-pane -U                               # left
 bind l select-pane -R                               # right
 bind H resize-pane -L 10                            # 向左扩展10
-bind R resize-pane -R 10                            # 向右扩展10
+bind L resize-pane -R 10                            # 向右扩展10
 bind K resize-pane -U 5
 bind J resize-pane -D 5
 bind C-h split-window -v                            # 水平方向新增面板，加-c '${pane_current_path}'默认进入当前目录
