feat: vim add dart support

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,6 +8,7 @@ set-option -g mouse on                              # 启用鼠标
 set -g escape-time 0                                # 修改发送命令的默认延时时长
 set -g base-index 1                                 # 修改窗口默认编号从1开始
 #setw -g pane-base-index 1                          # 修改窗格默认编号从1开始
+# set-option -g status-position bottom
 
 unbind C-b
 bind C-a send-prefix
