tmux: change tmux config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,10 +19,10 @@ bind k select-pane -U                               # left
 bind l select-pane -R                               # right
 bind H resize-pane -L 10                            # 向左扩展10
 bind L resize-pane -R 10                            # 向右扩展10
-bind K resize-pane -U 5
-bind J resize-pane -D 5
-bind C-h split-window -v                            # 水平方向新增面板，加-c '${pane_current_path}'默认进入当前目录
-bind C-v split-window -h                            # 垂直方向新增面板，加 -c '${pane_current_path}'默认进入当前目录
+bind K resize-pane -U 5                             # 向上扩展5
+bind J resize-pane -D 5                             # 向下扩展5
+bind C-h splitw -v -c '#{pane_current_path}'        # 水平方向新增面板，加-c '${pane_current_path}'默认进入当前目录
+bind C-v splitw -h -c '#{pane_current_path}'        # 垂直方向新增面板，加 -c '${pane_current_path}'默认进入当前目录
 
 bind Escape copy-mode # 绑定esc键为进入复制模式
 bind -T copy-mode-vi v send-keys -X begin-selection
