--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -45,25 +45,26 @@ set -g status-interval 2                            # 状态栏刷新时间
 set -g status-justify 'left'                      # 状态栏列表 centre, left, right
 
 set -g status-bg black                              # 设置状态栏背景
-set -g status-fg yellow                                # 设置状态栏前景
+set -g status-fg green                                # 设置状态栏前景
 
 # 状态栏左侧内容 #S #I #P #W
-set -g status-left '🚀#[fg=yellow]#[bg=black] #S | #I.#P | #W | WIN: '
+set -g status-left '#[fg=green]#[bg=black] #S | #I.#P | #W | WIN: '
 set -g status-left-length 60                        # 状态栏左边长度300
 # 状态栏右侧内容
-set -g status-right 'NAME:#[fg=green]MARK ZHANG #[default]| #{sysstat_cpu} | #{sysstat_mem} | #{battery_icon} #{battery_percentage} 🕓#[fg=blue]#[bg=black] %Y-%m-%d %a %H:%M #[default]'
+# set -g status-right 'NAME:#[fg=green]MARK ZHANG #[default]| #{sysstat_cpu} | #{sysstat_mem} | #{battery_icon} #{battery_percentage} #[fg=blue]#[bg=black] %Y-%m-%d %a %H:%M #[default]'
+set -g status-right '%Y-%m-%d %a %H:%M #[default]'
 set -g status-right-length 60                       # 状态栏右边长度500
 
 # 设置window样式
-set-window-option -g window-status-style 'fg=yellow,bg=black'
-set-window-option -g window-status-current-style 'fg=black,bg=#a4d900'
+set-window-option -g window-status-style 'fg=green,bg=black'
+set-window-option -g window-status-current-style 'fg=black,bg=#3cc200'
 
 # 插件列表
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @plugin 'tmux-plugins/tmux-battery'
-set -g @plugin 'samoshkin/tmux-plugin-sysstat'
+# set -g @plugin 'tmux-plugins/tmux-battery'
+# set -g @plugin 'samoshkin/tmux-plugin-sysstat'
 
 # 插件设置
 
