--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -11,13 +11,14 @@ dynamic_background_opacity yes
 dim_opacity 0.6
 
 # cursor
+cursor none
 cursor_shape block
 cursor_blink_interval 0
 shell_integration no-cursor
 
 # BEGIN_KITTY_THEME
 # Dark Pastel
-include current-theme.conf
+# include current-theme.conf
 # END_KITTY_THEME
 
 # enabled_layouts grid
